--- a/conf/config.ini
+++ b/conf/config.ini
@@ -4,3 +4,7 @@ taobao_api = http://ip.taobao.com/service/getIpInfo.php?ip=
 [ip_range]
 ip_start = 119.40.35.194
 ip_end = 255.255.255.255
+
+[position]
+ip = 119.40.35.204
+
